--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!doctype html>
 <html>
 <head>
+  <title>yasp</title>
+  <style type="text/css">
+    h1
+    {
+      font-size: 2.5em;
+      margin-bottom: 0;
+    }
+    h2
+    {
+      margin: 0;
+      margin-bottom: 0.8em;
+      font-size: 0.8em;
+    }
+    ul
+    {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+    ul > li
+    {
+      display: inline-block;
+    }
+    ul > li:before
+    {
+      content: " | ";
+      font-size: 150%;
+    }
+    ul > li:first-child:before
+    {
+      content: "";
+    }
+  </style>
 </head>
 <body>
   <center>
     <h1>yasp.</h1>
+    <h2>Diplomprojekt an der HTL Spengergasse</h2>
+    <ul>
+      <li><a href="/pflichtenheft/">Pflichtenheft</a></li>
+      <li><a href="/yasp/src/app/test/repl.html">Demo</a></li>
+      <li><a href="/">Projektbeschreibung</a></li>
+    </ul>
   </center>
 </body>
 </html>
