Added target=_blank to logo-links

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ a look at the about-section in the IDEs menu.
         </div>
         <hr>
         <div id="logos">
-            <a href="https://uberspace.de/"><img src="./img/uberspace.png"></a>
-            <a href="http://www.gnu.org/licenses/gpl.html"><img src="./img/gplv3.png"></a>
-            <a href="http://www.spengergasse.at/"><img id="spglogo" src="./img/spg.png"></a>
+            <a href="https://uberspace.de/" target="_blank"><img src="./img/uberspace.png"></a>
+            <a href="http://www.gnu.org/licenses/gpl.html" target="_blank"><img src="./img/gplv3.png"></a>
+            <a href="http://www.spengergasse.at/" target="_blank"><img id="spglogo" src="./img/spg.png"></a>
         </div>
     </center>
 </body>
