fixed markup validation errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <center>
-        <img src="./img/logo.png" id="logo">
+        <img src="./img/logo.png" id="logo" alt="logo">
         <ul id="menu">
             <li><a href="http://demo.yasp.me/">Demo</a></li>
             <li><a href="http://github.com/yasp/yasp">GitHub</a></li>
@@ -85,9 +85,9 @@ a look at the about-section in the IDEs menu.
         </div>
         <hr>
         <div id="logos">
-            <a href="https://uberspace.de/" target="_blank"><img src="./img/uberspace.png"></a>
-            <a href="http://www.gnu.org/licenses/gpl.html" target="_blank"><img src="./img/gplv3.png"></a>
-            <a href="http://www.spengergasse.at/" target="_blank"><img id="spglogo" src="./img/spg.png"></a>
+            <a href="https://uberspace.de/" target="_blank"><img src="./img/uberspace.png" alt="uberspace"></a>
+            <a href="http://www.gnu.org/licenses/gpl.html" target="_blank"><img src="./img/gplv3.png" alt="GPLv3"></a>
+            <a href="http://www.spengergasse.at/" target="_blank"><img id="spglogo" src="./img/spg.png" alt="HTL Spengergasse"></a>
         </div>
     </center>
 </body>
