fixed broken english in index.html

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ a look at the about-section in the IDEs menu.
             </p>
             <h2>Features</h2>
             <p>
-                yasp features 43 instructions (73 with all overloads), which can access it's 32 byte and word registers and the connected hardware. The main features of the project are:
+                yasp features 43 instructions (73 with all overloads), which can access its 32 byte and word registers and the connected hardware. The main features of the project are:
             </p>
             <ul id="features">
                 <li>
                     Editor
                     <ul>
-                        <li>syntax highliting</li>
+                        <li>syntax highlighting</li>
                         <li>live error-checking</li>
                         <li>interactive quickhelp</li>
                     </ul>
@@ -57,7 +57,7 @@ a look at the about-section in the IDEs menu.
                         <li>hardware-interrupts</li>
                         <li>32 byte registers, 32 word registers</li>
                         <li>PWM-Simulation (soft blinking LEDs)</li>
-                        <li>25 kHz in benchmarks on a i7-3630QM</li>
+                        <li>25 kHz in benchmarks on an i7-3630QM</li>
                         <li>carry and zero flag</li>
                     </ul>
                 </li>
