--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Project</h2>
             <p>
 yasp is a fully functional web-based assembler development environment, including a real assembler, emulator and debugger.
-The assembler dialect is a custom which is held very simple so as to keep the learning curve as shallow as possible.
+The assembler dialect is custom and very simple so as to keep the learning curve as shallow as possible.
 It also features some hardware-elements (LED, Potentiometer, Button, etc.). The goal of this project is to create an
 environment in which students can learn the assembly language so that they understand computers better. Furthermore it
 allows them to experiment without the fear of breaking something.
