added debugger image to homepage

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ a look at the about-section in the IDEs menu.
             <p>
                 yasp started out as a school project and was then later, in early 2014, released into public as GPL.
             </p>
+            <a href="http://demo.yasp.me/"><img src="./debugger.gif" class="debugger"/></a>
             <h2>Team</h2>
             <p>
                 The original project team of yasp consists of <a href="http://programming-with-design.at/">Robert Fischer</a> and <a href="http://luto.at">Michael "luto" Lutonsky</a>. For more information take a look at the about-section in the IDEs menu.
