--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ a look at the about-section in the IDEs menu.
             <h2>Team</h2>
             <p>
                 The original project team of yasp consists of <a href="http://programming-with-design.at/">Robert Fischer</a> and <a href="http://luto.at">Michael "luto" Lutonsky</a>. For more information take a look at the about-section in the IDEs menu.
+            </p> 
+            <p>
+                You can contact us at team - et - yasp.me!
             </p>
             <h2>Features</h2>
             <p>
